@@ -144,6 +144,10 @@ Special features/options:
   --with-csops
 	Add CSOps standard options.  You probably aren't interested in this.
 
+  --with-linux-audit
+	Enable audit support for Linux systems.  Audits attempts
+	to run a command as well as SELinux role changes.
+
   --with-skey[=DIR]
 	Enable S/Key OTP (One Time Password) support.  If specified,
 	DIR should contain include and lib directories with skey.h
